<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KDPOS</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="Invoice">Invoice</string>
    <string name="CreateInvoice">Create Invoice</string>
    <string name="customerName">Customer full name</string>
    <string name="emailAddress">Email address</string>
    <string name="email">email</string>
    <string name="mobileNumber">Mobile number</string>
    <string name="location">Location</string>
    <string name="paymentType">Payment Type</string>
    <string name="Date">Enter Date</string>
    <string name="Submit">Add Items</string>
    <string name="clearAll">Reset</string>
    <string name="Calendar">Calendar</string>
    <string name="AddItems">Add Items</string>
    <string name="Add">Add</string>
    <string name="totalAmt">Total</string>
    <string name="TotalQty">Quantity</string>
    <string name="CustomerLoc">Customer(Location)</string>
    <string name="Amount">Amount</string>
    <string name="Item">Item</string>
    <string name="Quantity">Quantity</string>
    <string name="Price">Price</string>

    <string-array name="paymentMode">
        <item>Select</item>
        <item>Cash</item>
        <item>Credit Card</item>
        <item>Debit Card</item>
        <item>Cheque</item>
        <item>DD</item>
    </string-array>

</resources>
