<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/lytAmountDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/switch_thumb_disabled_material_light"
        android:orientation="horizontal"
        android:weightSum="1">

        <EditText
            android:id="@+id/txtTotalAmt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:layout_weight="0.34"
            android:background="@drawable/editrect"
            android:hint="@string/totalAmt"
            android:paddingLeft="5dp"
            android:paddingRight="5dp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.34" />

        <TextView
            android:id="@+id/customerLoc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/CustomerLoc"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.34" />

        <EditText
            android:id="@+id/txtQty"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/editrect"
            android:hint="@string/TotalQty"
            android:paddingLeft="5dp"
            android:paddingRight="5dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="88dp"
                android:layout_height="wrap_content"
                android:drawablePadding="2px"
                android:padding="5dp"
                android:text="@string/Amount" />

            <TextView
                android:layout_width="88dp"
                android:layout_height="wrap_content"
                android:text="@string/Item" />

            <TextView
                android:layout_width="88dp"
                android:layout_height="wrap_content"
                android:text="@string/Quantity" />

            <TextView
                android:layout_width="88dp"
                android:layout_height="wrap_content"
                android:text="@string/Price" />

        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableLayout
            android:id="@+id/tblDetails"
            android:layout_width="match_parent"
            android:layout_height="match_parent">



        </TableLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="45dp"
        android:layout_height="34dp"
        android:layout_gravity="right"
        android:text="+" />
</LinearLayout>